# MedVQA

./: .gitignore  .gitmodules  README.md  gradio_interface.py  gradio_launcher.py  pyproject.toml  s.json  setup.py
.github/workflows/: gradio-app-HuggingFaceSpace-SimulaMet-MedVQA-2025.yml  gradio-app-HuggingFaceSpace-SimulaMet-MedVQA-GI-2026.yml  gradio-app-HuggingFaceSpace-SimulaMet-Medico-2025.yml  gradio-app-HuggingFaceSpace-SimulaMet-Medico-2026.yml  gradio-app-HuggingFaceSpace.yml  publish.yml  python-app.yml
medvqa/: cli.py
medvqa/competitions/gi-2025/: task_1.py  task_2.py
medvqa/competitions/gi-2025/task_1/: run.py
medvqa/competitions/gi-2026/: submission_portal.py  task_1.py  task_2.py
medvqa/competitions/medico-2025/: submission_portal.py  task_1.py  task_2.py
medvqa/competitions/medico-2026/: submission_portal.py  task_1.py  task_2.py
medvqa/gi-2025/task1/: run.py
medvqa/gi-2025/task2/: run.py
medvqa/submission_samples/: Untitled
medvqa/submission_samples/gi-2025/: submission_task1.py  submission_task2.py
medvqa/submission_samples/gi-2026/: submission_task1.py
medvqa/submission_samples/medico-2025/: submission_task1.py  submission_task1_swift.py
medvqa/submission_samples/medico-2026/: submission_task1.py  submission_task1_swift.py
