[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medvqa"
version = "0.122"
description = "Your project description here"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    # Add your dependencies here
]

[project.scripts]
medvqa = "medvqa.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*", "competitions/**/"]